U(Security) cho phep heal check va cap phep cho cloud front